# polypocket

./: .airplane-watch.md  .env.example  .gitignore  pyproject.toml
docs/plans/: 2026-04-14-polypocket-design.md  2026-04-14-polypocket-implementation.md  2026-04-15-backtest-simulator-design.md  2026-04-15-fat-tail-calibration-design.md  2026-04-15-fat-tail-calibration-implementation.md  2026-04-15-finetuning-data-capture-design.md  2026-04-15-finetuning-data-capture-implementation.md  2026-04-15-up-threshold-and-calibration-design.md  2026-04-15-up-threshold-and-calibration-implementation.md  2026-04-16-edge-vol-sizing-design.md  (+12 more)
polypocket/: __init__.py  __main__.py  analyze.py  backtest.py  backtester.py  bot.py  config.py  executor.py  fillmodel.py  ledger.py  observer.py  quotes.py  risk.py  signal.py  tui.py
polypocket.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: _cohort_analysis.md  analyze_buffer_cohort.py  check_stranded_fills.py  cohort_watchdog.py  derive_clob_creds.py  diagnose_live_auth.py  fit_calibration.py  probe_gtc_cancel.py  probe_pair_merge_limit.py  replay_paper_live_fills.py  sim_filters.py  sweep_df.py
tests/: conftest.py  test_analyze_buffer_cohort.py  test_backtester.py  test_binance_feed.py  test_bot.py  test_chainlink.py  test_cohort_stop.py  test_cohort_watchdog.py  test_config.py  test_executor.py  test_fill_model.py  test_ledger.py  test_observer.py  test_polymarket_client.py  test_polymarket_feed.py  test_price_to_beat_integration.py  test_quotes.py  test_risk.py  test_signal.py  test_tui.py
(+7 files in other folders)
