[project]
name = "polypocket"
version = "0.1.0"
description = "Directional 5-minute BTC prediction bot for Polymarket"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0.0",
    "py-clob-client==0.19.0",
    "websockets>=12.0",
    "textual>=3.0.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
